--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
         <nav class="navbar">
             <a href="#home" style="--i:1" class="active">Home</a>
             <a href="#about" style="--i:2">About Us</a>
-            <a href="#skills" style="--i:3">Products</a>
+            <a href="#products" style="--i:3">Products</a>
             <!-- <a href="#projects" style="--i:4">Clients</a> -->
             <a href="#contact" style="--i:5">Contact Us</a>
         </nav>
     </header>
-    <section class="home">
-
+    <section class="home" id="home">
         <div class="home-text">
             <div class="homecontent">
                 <h1>IF IT'S ABOUT WEIGHING,<br>IT'S ABOUT US.</h1>
@@ -114,7 +113,7 @@
         </div>
     </section>
     <section class="info">
-        <marquee onmouseover="this.stop();" onmouseout="this.start()">45 Years of Quality and Reliabilty &nbsp; &nbsp;
+        <marquee onmouseover="this.stop();" onmouseout="this.start()">25+ Years of Quality and Reliabilty &nbsp; &nbsp;
             &starf;
             &nbsp;&nbsp; Make In India &nbsp; &nbsp;
             &starf;
@@ -123,7 +122,7 @@
             &nbsp;&nbsp; 5000+ Satisfied Customers &nbsp;&nbsp;
         </marquee>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-text">
             <h1>About <span>Us</span></h1>
             <h2>ELESOL</h2>
@@ -152,11 +151,115 @@
             <img src="elec/Make_In_India.png" width="300px" style="background-color: white;" alt="">
         </div>
     </section>
+    <section class="products" id="products">
+        <h1>PRODUCTS</h1>
+        <details>
+            <summary>Load Cell</summary>
+            <div class="items">
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/compression load cell.jpeg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Compression Load Cell</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/cup and ball load cell.jpeg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Cup and Ball Load Cell</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/double ended shear beam load cell.jpeg" style="object-fit: contain;" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Double Ended Shar Beam</p>
+                    </div>
+                </div>
+            </div>
+        </details>
+        <br><br>
+        <details>
+            <summary>Weighbridge</summary>
+            <div class="items">
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/mobile weighbridge.jpg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Mobile Weighbridge</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/pit type.jpg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Pit Type Weighbridge</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/rcc type.jpg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>RCC Type Weighbridge</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/surface type .jpeg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Surface Type Weighbridge</p>
+                    </div>
+                </div>
+            </div>
+        </details>
+        <br><br>
+        <details>
+            <summary>Online System</summary>
+            <div class="items">
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/online system.jpg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Online System</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="front">
+                        <img src="elec/online system1.jpg" width="300px" height="200px" alt="">
+                    </div>
+                    <div class="back">
+                        <p>Online System</p>
+                    </div>
+                </div>
+            </div>
+        </details>
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#00cba9" fill-opacity="0.74"
+                d="M0,32L11.4,74.7C22.9,117,46,203,69,213.3C91.4,224,114,160,137,112C160,64,183,32,206,21.3C228.6,11,251,21,274,21.3C297.1,21,320,11,343,37.3C365.7,64,389,128,411,133.3C434.3,139,457,85,480,101.3C502.9,117,526,203,549,250.7C571.4,299,594,309,617,298.7C640,288,663,256,686,240C708.6,224,731,224,754,218.7C777.1,213,800,203,823,213.3C845.7,224,869,256,891,229.3C914.3,203,937,117,960,96C982.9,75,1006,117,1029,133.3C1051.4,149,1074,139,1097,138.7C1120,139,1143,149,1166,144C1188.6,139,1211,117,1234,128C1257.1,139,1280,181,1303,197.3C1325.7,213,1349,203,1371,208C1394.3,213,1417,235,1429,245.3L1440,256L1440,320L1428.6,320C1417.1,320,1394,320,1371,320C1348.6,320,1326,320,1303,320C1280,320,1257,320,1234,320C1211.4,320,1189,320,1166,320C1142.9,320,1120,320,1097,320C1074.3,320,1051,320,1029,320C1005.7,320,983,320,960,320C937.1,320,914,320,891,320C868.6,320,846,320,823,320C800,320,777,320,754,320C731.4,320,709,320,686,320C662.9,320,640,320,617,320C594.3,320,571,320,549,320C525.7,320,503,320,480,320C457.1,320,434,320,411,320C388.6,320,366,320,343,320C320,320,297,320,274,320C251.4,320,229,320,206,320C182.9,320,160,320,137,320C114.3,320,91,320,69,320C45.7,320,23,320,11,320L0,320Z">
+            </path>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#0099ff" fill-opacity="0.66"
+                d="M0,160L16,160C32,160,64,160,96,154.7C128,149,160,139,192,112C224,85,256,43,288,42.7C320,43,352,85,384,90.7C416,96,448,64,480,74.7C512,85,544,139,576,144C608,149,640,107,672,106.7C704,107,736,149,768,165.3C800,181,832,171,864,176C896,181,928,203,960,229.3C992,256,1024,288,1056,298.7C1088,309,1120,299,1152,266.7C1184,235,1216,181,1248,186.7C1280,192,1312,256,1344,266.7C1376,277,1408,235,1424,213.3L1440,192L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z">
+            </path>
+        </svg> -->
+    </section>
     <section class="contact" id="contact">
         <div class="phone">
             <h1>Contact <span>Us</span></h1> <br>
-            <i class='bx bx-phone' style='color:#ffffff'></i>&emsp; +91- <br><br><br>
-            <a href="mailto:"><i class='bx bxl-gmail' style='color:#ffffff'></i> &emsp; electroweigh@gmail.com</a>
+            <i class='bx bx-phone' style='color:#ffffff'></i>&emsp; +91-9773792825 <br><br>
+            <i class='bx bx-phone' style='color:#ffffff'></i>&emsp; +91-8384034436 <br><br>
+            <a href="mailto:electroweighsolution@gmail.com"><i class='bx bxl-gmail' style='color:#ffffff'></i> &emsp;
+                electroweighsolution@gmail.com</a>
         </div>
         <div class="office">
             <i class='bx bx-map'></i> 2nd Floor, C-174, Prashant Vihar, Rohini, <br> &emsp; North West Delhi,
