add director's statement and modify

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 
         </div>
     </section>
+    <a href="https://wa.me/918384034436">
+        <i class='bx bxl-whatsapp bx-tada'
+            style='color:#14fc14; border-radius:50%; font-size: 80px; background-color:#fff; position:fixed; bottom:7px; right:7px; z-index:3'></i>
+    </a>
     <section class="info">
         <marquee onmouseover="this.stop();" onmouseout="this.start()">25+ Years of Quality and Reliabilty &nbsp; &nbsp;
             &starf;
@@ -147,76 +151,100 @@
                     <p class="btn">Know More <i class='bx bx-right-arrow-alt'></i></p>
                 </button>
         </div>
-        <div class="img"><img src="elec/image_870x_65ccc64be5473.jpg" width="300px" alt="">
-            <img src="elec/Make_In_India.png" width="300px" style="background-color: white;" alt="">
+        <!-- <div class="img"><img src="elec/image_870x_65ccc64be5473.jpg" width="300px" alt="">
+            <img src="elec/Make_In_India.png" width="300px" style="background-color: white;" alt=""> -->
+        <img src="elec/presence.jpg" width="500px" alt="">
         </div>
     </section>
     <section class="products" id="products">
         <h1>PRODUCTS</h1>
         <details>
-            <summary>Load Cell</summary>
+            <summary>Weighbridge</summary>
             <div class="items">
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/compression load cell.jpeg" width="300px" height="200px" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/mobile weighbridge.jpg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Mobile Weighbridge</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>Compression Load Cell</p>
-                    </div>
+                    <p>MOBILE WEIGHBRIDGE</p>
                 </div>
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/cup and ball load cell.jpeg" width="300px" height="200px" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/pit type.jpg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Pit Type Weighbridge</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>Cup and Ball Load Cell</p>
-                    </div>
+                    <p>PIT TYPE WEIGHBRIDGE</p>
                 </div>
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/double ended shear beam load cell.jpeg" style="object-fit: contain;" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/rcc type.jpg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>RCC Type Weighbridge</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>Double Ended Shar Beam</p>
+                    <p>RCC TYPE WEIGHBRIDGE</p>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/surface type .jpeg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Surface Type Weighbridge</p>
+                        </div>
                     </div>
+                    <p>SURFACE TYPE WEIGHBRIDGE</p>
                 </div>
             </div>
         </details>
         <br><br>
+
         <details>
-            <summary>Weighbridge</summary>
+            <summary>Load Cell</summary>
             <div class="items">
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/mobile weighbridge.jpg" width="300px" height="200px" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/compression load cell.jpeg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Compression Load Cell</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>Mobile Weighbridge</p>
-                    </div>
+
+                    <p>Compression Load Cell</p>
                 </div>
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/pit type.jpg" width="300px" height="200px" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/cup and ball load cell.jpeg" width="300px" height="200px" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Cup and Ball Load Cell</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>Pit Type Weighbridge</p>
-                    </div>
+                    <p>Cup and Ball Load Cell</p>
                 </div>
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/rcc type.jpg" width="300px" height="200px" alt="">
+                <div>
+                    <div class="card">
+                        <div class="front">
+                            <img src="elec/double ended shear beam load cell.jpeg" style="object-fit: contain;" alt="">
+                        </div>
+                        <div class="back">
+                            <p>Double Ended Shear Beam</p>
+                        </div>
                     </div>
-                    <div class="back">
-                        <p>RCC Type Weighbridge</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="front">
-                        <img src="elec/surface type .jpeg" width="300px" height="200px" alt="">
-                    </div>
-                    <div class="back">
-                        <p>Surface Type Weighbridge</p>
-                    </div>
+                    <p>Double Ended Shear Beam</p>
                 </div>
             </div>
         </details>
@@ -253,13 +281,44 @@
             </path>
         </svg> -->
     </section>
+    <section class="director">
+        <h1>DIRECTOR'S STATEMENT</h1>
+        <q>Building our bridge towards a better future</q>
+        <p>Our aim is to provide you weighbridges which lasts generations. Electroweigh Solution’s growth has been sure
+            and steady due to its strong focus on quality in manufacturing process and service provided to our customer
+            under any circumstance anywhere in India has led to satisfied and loyal customer base. Because of our
+            quality and highly advanced weighbridges we have reached a pre-eminent position in its market segment with
+            fully operational manufacturing facility in Delhi, India. To provide our customers the fastest possible
+            service in any part of india we have several Engineers distributed strategically all across India so that
+            your weighbridge doesn’t stop even for few hours.
+            <br><br>
+            We at Electroweigh Solution strive to protect your profits by providing the best accuracy and quality
+            product. Together as a family we will counter every challenge that may come our way like we have always
+            faced them successfully with our operational efficiency. Our passion to excel in manufacturing Weighbridge
+            and Weighing instruments has gives us a unique distinction in every aspect of this competitive industry. The
+            testimonials we receive always motivate us to perform better every moment.
+            <br><br>
+            At Electroweigh Solution, we are committed to offer the best possible and pocket friendly solution for the
+            weighing industry because we value your money.
+        </p>
+        <q>
+            Electroweigh Solution is a quality and customer oriented company with global vision and reach. The journey
+            of Electroweigh Solution started 40 years ago with a dream to set up a weighbridge manufacturing company in
+            the capital of India. After working in each and every segment from marketing to production of this industry
+            the foundation Electroweigh Solution was laid with a dream and vision to provide Indian industries with best
+            in class and highly advanced made in India Weighbridges & Weighing Instrument.
+        </q>
+        <p class="name">~Mr. Manoj Gupta</p>
+    </section>
     <section class="contact" id="contact">
         <div class="phone">
             <h1>Contact <span>Us</span></h1> <br>
             <i class='bx bx-phone' style='color:#ffffff'></i>&emsp; +91-9773792825 <br><br>
             <i class='bx bx-phone' style='color:#ffffff'></i>&emsp; +91-8384034436 <br><br>
             <a href="mailto:electroweighsolution@gmail.com"><i class='bx bxl-gmail' style='color:#ffffff'></i> &emsp;
-                electroweighsolution@gmail.com</a>
+                electroweighsolution@gmail.com</a><br><br>
+            <img src="elec/Make_In_India.png" width="300px"
+                style="background-color: #ffffff; padding: 5px; margin: 5px;">
         </div>
         <div class="office">
             <i class='bx bx-map'></i> 2nd Floor, C-174, Prashant Vihar, Rohini, <br> &emsp; North West Delhi,
@@ -279,6 +338,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
+
     <footer>
         <p>Developed by Yakshit Khurana &copy; 2024</p>
     </footer>
